[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "scipy >= 1.13.1",
    "numpy == 2.0.0",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "chainopy"
version = "1.0.1"
description = "A Python Library for Markov Chain based Stochastic Analysis!"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Aadya Aneesh Chinubhai", email = "aadyachinubhai@gmail.com" }
]
keywords = ["markov chain", "stochastic analysis", "python"]
dependencies = [
    "Cython",
    "numpy == 2.0.0",    
    "scipy >= 1.13.0",
    "xarray",
    "matplotlib",
    "networkx",
    "torch",
    "numba",
    "statsmodels"
]

[project.urls]
homepage = "https://chainopy.readthedocs.io/en/latest/"
repository = "https://github.com/aadya940/chainopy"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp* *musllinux*"

[tool.cibuildwheel.linux]
before-all=[
    "yum install -y openblas-devel",
]
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["auto64"]