[build-system]
requires = [
    "numpy == 2.0.0",
    "setuptools >= 61.0",
    "wheel",
    "scipy >= 1.13.1",
    "Cython >= 3.0.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "chainopy"
version = "1.0.2"
description = "A Python Library for Markov Chain based Stochastic Analysis!"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Aadya Aneesh Chinubhai", email = "aadyachinubhai@gmail.com" }
]
keywords = ["markov chain", "stochastic analysis", "python"]
dependencies = [
    "numpy == 2.0.0",
    "Cython >= 3.0.4",
    "scipy >= 1.13.0",
    "xarray >= 2024.06.0",
    "matplotlib >= 3.8.4",
    "networkx >= 3.3",
    "torch >= 2.3.0",
    "statsmodels >= 0.14.2"
]

[project.urls]
homepage = "https://chainopy.readthedocs.io/en/latest/"
repository = "https://github.com/aadya940/chainopy"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp* *musllinux*"

[tool.cibuildwheel.linux]
before-all=[
    "yum install -y openblas-devel",
]
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["auto64"]